--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Bicycle-pr</title>
 </head>
 <body>
-    
+  <header class="wrapper" id="header">
+    <div class="header-left">
+      <a href="index.html"><img src="img/logo.svg" alt="Bicycle-pr"></a>
+    </div>
+    <div class="header-right">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <main>
+    <div id="mainvisual">
+      <img src="img/mainvisual.jpg" alt="Bicycle-pr">
+    </div>
+
+    <section class="wrapper" id="about">
+      <h2 class="section-title">About</h2>
+      <div class="content">
+        <img src="img/about.jpg" alt="Bicycle-pr">
+        <div class="text">
+          <h3 class="content-title">KAKERU MIYAUCHI</h3>
+          <p>テキスト</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="wrapper" id="bicycle">
+      <h2 class="section-title">Bicycle</h2>
+      <ul>
+        <li>
+          <img src="img/bicycle1.jpg" alt="Bicycle-pr">
+          <h3>BIKE1</h3>
+          <p>テキスト</p>
+        </li>
+        <li>
+          <img src="img/bicycle2.jpg" alt="Bicycle-pr">
+          <h3>BIKE2</h3>
+          <p>テキスト</p>
+        </li>
+        <li>
+          <img src="img/bicycle3.jpg" alt="Bicycle-pr">
+          <h3>BIKE3</h3>
+          <p>テキスト</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer id="footer">
+    <p>&copy; 2020 Profile</p>
+  </footer>
+
 </body>
 </html>
